--- a/.env.example
+++ b/.env.example
@@ -17,5 +17,6 @@ REDIS_PORT=<YOUR_REDIS_PORT>
 
 AWS_ACCESS_KEY_ID=<YOUR_ACCESS_KEY>
 AWS_SECRET_ACCESS_KEY=<YOUR_SECRET_KEY>
+AWS_REGION=<YOUR_AWS_REGION>
 ATHENA_DB=<YOUR_ATHENA_DB>
 ATHENA_COUNT_TABLE=<YOUR_TABLE_NAME>
